A set of microservices built with Go/ModSec ruleset switcher/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
meta
  name: security
  labels:
    tier: security
    team: platform
